fix broken css property

--- a/app/assets/stylesheets/_search-form.scss
+++ b/app/assets/stylesheets/_search-form.scss
@@ -9,7 +9,7 @@
 
   &__label {
     flex-shrink: 0;
-    margin-right: 0 $spacing ($spacing / 2) 0;
+    margin: 0 $spacing ($spacing / 2) 0;
     color: $color-gray;
   }
 }
